menu done functions is in. Left sorting and Removing